<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272343"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/question_number"
        android:textColor="#ffa384"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selectOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selctedoption"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:visibility="gone" />

        <TextView
            android:id="@+id/correctAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correctanswer"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/question_1"
            android:textColor="#ffffff"
            android:textSize="22sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FirstTwoOption"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/optionA"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/optiondesign"
            android:textColor="#272343"
            android:text="@string/question1_A"
            android:textAlignment="center"
            android:paddingTop="14dp" />
        <TextView
            android:id="@+id/optionB"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/question1_B"
            android:background="@drawable/optiondesign"
            android:layout_marginTop="10dp"
            android:textColor="#272343"
            android:textAlignment="center"
            android:paddingTop="14dp" />
        <TextView
            android:id="@+id/optionC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/question1_C"
            android:background="@drawable/optiondesign"
            android:layout_marginTop="10dp"
            android:textColor="#272343"
            android:textAlignment="center"
            android:paddingTop="14dp" />

        <TextView
            android:id="@+id/optionD"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/question1_D"
            android:background="@drawable/optiondesign"
            android:textColor="#272343"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:paddingTop="14dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/score"
            android:layout_gravity="end"
            android:padding="10dp"/>

        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffa384"
            android:layout_gravity="bottom"
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false"/>
<!--for horizontal progress bar. for vertical remove style-->
    </LinearLayout>

</LinearLayout>